<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.basketball.mybasketball.AddTeamDialog">

    <!-- TODO: Update blank fragment layout -->


    <ImageButton
        android:id="@+id/btnTeamImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:contentDescription="@string/team_card_img_dsc"
        android:src="@drawable/ic_face_black_48dp" />

    <EditText
        android:id="@+id/tName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/team_card_name_dsc"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:text="@string/team_card_name_dsc"
        android:textAlignment="textStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btDialogCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btDialogOk"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>